--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/sleepy-discord"]
 	path = deps/sleepy-discord
 	url = https://github.com/yourWaifu/sleepy-discord.git
+[submodule "deps/stb"]
+	path = deps/stb
+	url = https://github.com/nothings/stb.git
