Remove stb from dependencies, move relevant header files to util folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required (VERSION 3.6)
 project(example)
 
-add_executable(chessai chessai.cpp engine/board.cpp)
+add_executable(chessai chessai.cpp engine/board.cpp engine/bits.cpp engine/util.cpp engine/move.cpp)
 
 add_subdirectory(deps/sleepy-discord)
 target_link_libraries(chessai sleepy-discord)
