--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "deps/sleepy-discord"]
-	path = vendor/sleepy-discord
-	url = https://github.com/yourWaifu/sleepy-discord.git
 [submodule "vendor/Brainiac"]
 	path = vendor/Brainiac
 	url = https://github.com/SirBob01/Brainiac
+[submodule "vendor/DPP"]
+	path = vendor/DPP
+	url = https://github.com/brainboxdotcc/DPP
