Fix build for Brainiac module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,8 @@
-#CMakeLists.txt
 cmake_minimum_required (VERSION 3.6)
-project(example)
+project(chessai)
 
-add_executable(chessai chessai.cpp vendor/Brainiac/engine/bits.cpp 
-                                   vendor/Brainiac/engine/board.cpp 
-                                   vendor/Brainiac/engine/brainiac.cpp 
-                                   vendor/Brainiac/engine/move.cpp 
-                                   vendor/Brainiac/engine/transpositions.cpp 
-                                   vendor/Brainiac/engine/util.cpp 
-                                   vendor/Brainiac/engine/zobrist.cpp)
+add_executable(chessai chessai.cpp)
+add_subdirectory(vendor/DPP)
+add_subdirectory(vendor/Brainiac)
 
-add_subdirectory(vendor/sleepy-discord)
-target_link_libraries(chessai sleepy-discord)
+target_link_libraries(chessai dpp brainiac)
