--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required (VERSION 3.6)
 project(chessai)
 
-add_executable(chessai chessai.cpp)
-add_subdirectory(vendor/DPP)
-add_subdirectory(vendor/Brainiac)
+add_executable(chessai src/chessai.cpp src/id.cpp src/image.cpp)
+add_subdirectory(src/vendor/DPP)
+add_subdirectory(src/vendor/Brainiac)
 
 target_link_libraries(chessai dpp brainiac)
