Implement ChessServer class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.6)
 project(chessai)
 
-add_executable(chessai src/chessai.cpp src/id.cpp src/image.cpp)
+add_executable(chessai src/chessai.cpp src/id.cpp src/image.cpp src/server.cpp)
 add_subdirectory(src/vendor/DPP)
 add_subdirectory(src/vendor/Brainiac)
 
